tests/sumo/errors/routes/invalid_departpos/errors.sumo
Warning: Invalid departPos 600.00 given for vehicle '0', time=0.00. Inserting at lane end instead.
